force-app/main/default/objects/DocumentTemplate__c/DocumentTemplate__c.object-meta.xml
<CustomObject>
    <label>Document Template</label>
    <pluralLabel>Document Templates</pluralLabel>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Defines PDF document templates with Google Doc integration and field parsing.</description>
</CustomObject>