force-app/main/default/objects/DocumentTemplate__c/fields/GoogleDocId__c.field-meta.xml
<CustomField>
    <fullName>GoogleDocId__c</fullName>
    <label>Google Doc ID</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>The Google Doc ID from the template URL</description>
    <inlineHelpText>Copy the ID from the Google Doc URL: docs.google.com/document/d/[THIS_IS_THE_ID]/edit</inlineHelpText>
</CustomField>