force-app/main/default/objects/DocumentTemplate__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether this template is available for use</description>
    <inlineHelpText>Uncheck to disable this template without deleting it</inlineHelpText>
</CustomField>