force-app/main/default/objects/DocumentTemplate__c/fields/LastValidated__c.field-meta.xml
<CustomField>
    <fullName>LastValidated__c</fullName>
    <label>Last Validated</label>
    <type>DateTime</type>
    <description>When the template was last validated and fields were parsed</description>
</CustomField>