force-app/main/default/objects/DocumentTemplate__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <label>Object API Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>The Salesforce object this template is for (e.g., Quote, Opportunity, Account)</description>
    <inlineHelpText>Enter the API name of the Salesforce object (e.g., Quote, Opportunity__c)</inlineHelpText>
</CustomField>