force-app/main/default/objects/DocumentTemplate__c/fields/OutputFileName__c.field-meta.xml
<CustomField>
    <fullName>OutputFileName__c</fullName>
    <label>Output File Name</label>
    <type>Text</type>
    <length>255</length>
    <description>File name pattern for generated PDFs. Supports merge fields like {{QuoteNumber}}</description>
    <inlineHelpText>Example: Quote_{{QuoteNumber}}_{{Account.Name}} or Invoice_{{TODAY}}</inlineHelpText>
</CustomField>