force-app/main/default/objects/DocumentTemplate__c/fields/ParsedFieldsJSON__c.field-meta.xml
<CustomField>
    <fullName>ParsedFieldsJSON__c</fullName>
    <label>Parsed Fields JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>JSON structure containing all parsed fields from the template. Auto-populated by validation service.</description>
    <inlineHelpText>This field is automatically populated when you validate the template. Contains all merge fields used in the template.</inlineHelpText>
</CustomField>