force-app/main/default/objects/DocumentTemplate__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <label>Sort Order</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Sort order for displaying templates</description>
    <defaultValue>100</defaultValue>
</CustomField>