force-app/main/default/objects/DocumentTemplate__c/fields/TemplateTextChecksum__c.field-meta.xml
<CustomField>
    <fullName>TemplateTextChecksum__c</fullName>
    <description>MD5 checksum of the template text from Google Docs. Used to detect when template has been modified and validation is stale.</description>
    <label>Template Text Checksum</label>
    <length>32</length>
    <type>Text</type>
</CustomField>