force-app/main/default/objects/DocumentTemplate__c/fields/ValidationMessage__c.field-meta.xml
<CustomField>
    <fullName>ValidationMessage__c</fullName>
    <label>Validation Message</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Errors or warnings from the last validation</description>
</CustomField>