force-app/main/default/objects/DocumentTemplate__c/fields/ValidationStatus__c.field-meta.xml
<CustomField>
    <fullName>ValidationStatus__c</fullName>
    <label>Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Validated</fullName>
                <default>true</default>
                <label>Not Validated</label>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Current validation status of the template</description>
</CustomField>